--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "postbuild": "next-sitemap",
     "deploy:do": "echo 'Deploy to DigitalOcean App Platform'"
   },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
+  },
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
@@ -28,7 +32,7 @@
     "fuse.js": "^7.1.0",
     "jspdf": "^3.0.3",
     "lucide-react": "^0.395.0",
-    "next": "14.2.4",
+    "next": "^14.2.33",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.3.0",
     "qrcode": "^1.5.4",
